Separacao de exemplos de lambda um sendo uma api-restful e outra uma mais comum
