# examples/lambda_api_restful/lambda_app/http_resources/__init__.py
@@ -1,0 +1,1 @@
+_REQUEST_IGNORED_KEYS = ['sort_by', 'order_by', 'offset', 'limit', 'fields']
